# rocket-tictactoe

./: .env  .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: api_routes.rs  auth.rs  hub.rs  main.rs  routes.rs  tictac.rs
src/api_routes/: home.rs  hub.rs  user.rs
src/database/: user.rs
