[workspace]
members = ["migration"]

[package]
name = "rocket_tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }
schemars = "*"
# okapi = {version = "0.7.0-rc.2"}
# rocket_cors = { version="0.6.0-alpha1" }
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
jsonwebtoken = "*"
chrono = "*"